@@ -1,4 +1,4 @@
-# $Id: ginfo.h2m,v 1.1 2011/02/22 19:18:14 karl Exp $
+# $Id: ginfo.h2m,v 1.1 2011/10/21 18:42:36 karl Exp $
 # Additional section for the info man page.
 # Copyright 2011 Free Software Foundation, Inc.
 #
