@@ -1,21 +1,11 @@
 .\" texinfo(5)
-.\" $Id: texinfo.5,v 1.3 2005/01/20 22:38:32 karl Exp $
+.\" $Id: texinfo.5,v 1.1 2011/10/21 18:42:36 karl Exp $
 .\"
-.\" Copyright (C) 1998, 1999, 2002 Free Software Foundation, Inc.
+.\" Copyright 1998, 1999, 2002, 2005, 2011 Free Software Foundation, Inc.
 .\"
-.\" Permission is granted to make and distribute verbatim copies of this
-.\" manual provided the copyright notice and this permission notice are
-.\" preserved on all copies.
-.\"
-.\" Permission is granted to copy and distribute modified versions of
-.\" this manual under the conditions for verbatim copying, provided that
-.\" the entire resulting derived work is distributed under the terms of a
-.\" permission notice identical to this one.
-.\"
-.\" Permission is granted to copy and distribute translations of this
-.\" manual into another language, under the above conditions for modified
-.\" versions, except that this permission notice may be stated in a
-.\" translation approved by the Foundation.
+.\" Copying and distribution of this file, with or without modification,
+.\" are permitted in any medium without royalty provided the copyright
+.\" notice and this notice are preserved.
 .\"
 .de EX
 .nf
@@ -47,7 +37,7 @@ M-x info RET m texinfo RET
 .EE
 will get you there.
 .SH AVAILABILITY
-ftp://ftp.gnu.org/gnu/texinfo/
+http://www.gnu.org/software/texinfo/
 .br
 or any GNU mirror site.
 .SH "REPORTING BUGS"
